[package]
name = "spaceshooter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
bevy_hanabi = "0.5.1"
bevy_rapier2d = "0.19.0"
leafwing-input-manager = "0.7.1" # A powerfully direct stateful input manager for the Bevy game engine.
rand = "0.8.5"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
